--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "ts-pnp": "^1.0.1"
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
